# Tetris

./: .gitignore  CGen.h  CMakeLists.txt  Makefile  README.md  S.h  S_train.h  Tetris.cpp  Tetris.h  autogame_test.cpp  board.cpp  board.h  feature_functions.cpp  feature_functions.h  feature_helpers.cpp  feature_helpers.h  ga_experiment.cpp  ga_summary.cpp  game_board.cpp  game_board.h  game_manager.cpp  game_manager.h  genetic_algorithm.cpp  genotype.cpp  genotype.h  main.cpp  main.h  options.cpp  options.h  phenotype.cpp  phenotype.h  population.cpp  population.h  random.cpp  random.h  sample.cpp  search.cpp  search.h  selection.cpp  selection.h  (+6 more)
